#29478 Cleanup